0.6.4 - "Service Pack"

  * Fixed crash with channel modes with parameter(s) missing [#1644967]
  * Fixed "nothing goes to inbox after updating to 0.6.3"
  * miau now understands Undernet-style PART messages [#1676231]
  * Option to disconnect clients upon connecting to server. Should help with
    server reconnect issues with mIRC and certain IRC networks such as
    Afternet. [#1673149]
  * Reset server timer when we receive data -- not just when PONG is received
  * Added option "privmsg_fmt". When multiple clients are attached, probably
    only the initiator of private chat will see the message flow correctly.
    When this option is set, given prefix is inserted into private messages
    echoed to other attached users. (E.g. "<he> <- <other_me> hello".)
  * Wildcard '*' now matches to an empty string
  * Open only privlog/fd for "user" and "User"


0.6.3 - "Minor changes"

  * Issuing "QUICKLOG" command without parameter now prints quicklog headers
  * Option "noidentifycapab" to suppress IDENTIFY-* requests
  * Option autoqlog now defaults to -1. When autoqlog is set to -1, full
    quicklog will be replayed (on attach).
  * Fixed user-provided privlog ignore-list
  * Now compiles with quicklog disabled
  * Finally got rid of bzeros
  * Fixed typo in misc/miaurc.in
  * Major clean-up of src/server.c


0.6.2 - "Meow"

  * Fixed crash with qlog-to-inbox feature if inbox failed to open
  * miau no longer thinks it doesn't have The Nick after being disconnected
    with correct nick, disconnected, given wrong nick at connect, then
    reconnected with preferred nick.
  * Channels are now reintroduces to the client before quicklog is replayed.
  * Added command to replay specified amount of quicklog
  * Added command FLUSHQLOG to flush specified time from quicklog
  * Added configuration option to (not to) replay quicklog on attach
  * Removed obsolete bits from README


0.6.1 - "All the trouble and twice the bugs"
